--- a/style.css
+++ b/style.css
@@ -101,6 +101,11 @@ margin-right: 0px;
   padding:10px 65px;
   
 }
+.apply:hover{
+    color: #4992ca;
+    background-color: white;
+
+}
 .register{
   border: 3px solid white;
   color: white;
@@ -125,3 +130,38 @@ margin-right: 0px;
     border-radius:15px ;
 
 }
+.pocket-monster
+{
+    background-color: #4992ca;
+    width: 100%;
+    height: 720px;
+    display:flex;
+    justify-content:start;
+    flex-direction: column;
+    align-items: center;
+
+}
+.p-header{
+    width: 100%;
+    height:85px;
+    
+    
+}
+.pocket-monster-header h2
+{
+    text-align: center;
+    font-size: 45px;
+    color: white;
+}
+.pocket-monster-header2{
+    font-size:30px;
+    text-align: center;
+    color: white;
+    
+}
+.container-pocket{
+    width:75%; 
+}
+
+
+
